# Parallel_lab3

./: CMakeLists.txt
src/: main.cpp
